# shujit

./: ChangeLog  GNUmakefile  GNUmakefile.in  README  cmd.mk  code.c  code.h  codedb.c  codedbinfo.c  compile.c  compiler.c  compiler.h  computil.c  config.h.in  configure  configure.in  gentable.rb  invoker.c  linker.c  opcodes.c  opcodes.h  opcodes.pl  opcodes_internal.h  optimize.c  postcmpl.rb  rate_codesize.rb  runtime.c  signal.c  stack.c  stack.h  support-xbox.c  x86tsc.c  x86tsc.h
NET/shudo/metavm/: AccCtrldServSocket.java  AccessController.java  ByValue.java  ByValueUtil.java  ByValueWrapper.java  DistObjectInputStream.java  DistObjectOutputStream.java  ExportTable.java  GNUmakefile.in  LocalClassLoader.java  MetaVM.java  MetaVMController.java  MetaVMServer.java  ObjectID.java  Protocol.java  Proxy.java  RemoteClassLoader.java  Skeleton.java  SocketAuthenticator.java  ThreadPool.java  ThreadPoolHook.java  TypeUtil.java  VMAddress.java  VMOperations.java
NET/shudo/metavm/registry/: AlreadyBoundException.java  NotBoundException.java  Registry.java
metavm/: GNUmakefile.in  byvalue.c  controller.c  metavm.h  nativemtd.c  objectid.c  proxy.c  type.c  vmop.c
tsctest/: Makefile  tsctest.c  x86tsc.c  x86tsc.h
txt/: benchmark-505EX  benchmark-P4  benchmark-PJ2X3  benchmark-SS3000  code.o-each-cc  codesize  dumpss.c  header  header.orig  inst-object  jdk12  jvmdi  memo  metavm  moba  multiarray  quick
